cleanup and native